fix: body does not respect scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -116,6 +116,10 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    scrollbar-width: thin;
+  }
+  html {
+    overflow: hidden;
   }
   body {
     @apply bg-background text-foreground;
@@ -123,10 +127,8 @@
 
     max-width: 100vw;
     min-width: 100vw;
+    height: 100dvh;
     overflow-x: hidden;
-
-    .scrollbar-custom {
-      scrollbar-width: thin;
-    }
+    overflow-y: scroll;
   }
 }
